// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init - registerContentScript > should register multiple manifest scripts on new permissions 1`] = `
[MockFunction registerContentScript] {
  "calls": [
    [
      {
        "allFrames": undefined,
        "css": [],
        "excludeMatches": undefined,
        "js": [
          "/script.js",
        ],
        "matches": [
          "https://granted.example.com/*",
        ],
        "runAt": undefined,
      },
    ],
    [
      {
        "allFrames": undefined,
        "css": [],
        "excludeMatches": undefined,
        "js": [
          "/otherScript.js",
        ],
        "matches": [
          "https://granted.example.com/*",
        ],
        "runAt": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`init - registerContentScript > should register the manifest scripts on multiple new permissions 1`] = `
[MockFunction registerContentScript] {
  "calls": [
    [
      {
        "allFrames": undefined,
        "css": [],
        "excludeMatches": undefined,
        "js": [
          "/script.js",
        ],
        "matches": [
          "https://granted.example.com/*",
        ],
        "runAt": undefined,
      },
    ],
    [
      {
        "allFrames": undefined,
        "css": [],
        "excludeMatches": undefined,
        "js": [
          "/script.js",
        ],
        "matches": [
          "https://granted-more.example.com/*",
        ],
        "runAt": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`init - registerContentScript > should register the manifest scripts on new permissions 1`] = `
[MockFunction registerContentScript] {
  "calls": [
    [
      {
        "allFrames": undefined,
        "css": [],
        "excludeMatches": undefined,
        "js": [
          "/script.js",
        ],
        "matches": [
          "https://granted.example.com/*",
        ],
        "runAt": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
